--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Documento sin título</title>
-        <link href="css/estilos.css" rel="stylesheet" type="text/css"
+        <link href="css/estilos.css" rel="stylesheet" type="text/css">
     </head>
 
     <body>
         <h1>Proyecto empresarial</h1>
+        <p>Párrafo agregado</p>
     </body>      
 </html>
